feat(handler): get data from api, send to client
