# assets/swagger/swagger.yml
@@ -29,10 +29,26 @@ definitions:
         example: eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWUsImlhdCI6MTUxNjIzOTAyMn0.VFb0qJ1LRg_4ujbZoRMXnVkUgiuKq5KxWqNdbKq_G9Vvz-S1zZa9LPxtHWKa64zDl2ofkT8F6jBt_K4riU-fPg
       expiry:
         description: Время, до наступления которого токен валиден
+  Bus:
+    properties:
+      id:
+        description: Идентификатор автобуса
+        type: integer
+        example: 1
+      city:
+        description: Название города
+        type: string
+        example: Москва
+      num:
+        description: Номер автобуса
+        type: string
+        example: "11"
 
 tags:
   - name: internal
     description: Internal routes
+  - name: graphs
+    description: Graphs routes
 
 paths:
   /internal/health:
@@ -45,3 +61,29 @@ paths:
           description: Success
         "500":
           description: Internal Server Error
+
+  /api/v1/graphs:
+    get:
+      summary: Получение графа маршрутов автобуса
+      tags:
+        - internal
+      parameters:
+        - name: city
+          description: Город
+          in: query
+          type: string
+          required: true
+        - name: bus
+          description: Номер автобуса
+          in: query
+          type: string
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Bus"
+        "400":
+          description: Bad request
+        "500":
+          description: Internal server error
